2017/11/29 v205
	1. The action bar support Masque now.
	2. If an action bar has only one button with its branches, you can use "Square Layout" or "Circle Layout" to change their locations with more easy ways.
	3. Two new action map : World Markder, Raid target.

2017/10/25 v203
	1. Fix the minimap for EnhanceBattlefieldMinimap.

2017/09/21 v201
	1. Fix auto repair.

2017/09/17 v199
	1. Add quest mark on nameplates.

2017/09/10 v197
	1. Fix a alpha error caused by button recycle.

2017/09/04 v196
	1. A little modification for the display style, If you don't need it, you can modify the ShareFeatures.lua change BORDER_SIZE to 1 to change back.
	2. The runes are now ordered to be easy using.

2017/09/02 v195
	1. Block the auto guild repair since it's protected.

2017/08/29 v193
	1. The container view's scale can be changed within the menu.

2017/08/24 v192
	1. The cooldown label won't display for global cooldown on the action buttons.

2017/08/14 v191
	1. Fix bugs for the opacity mechanism.
	2. The opacity will only affect when lock the bars.

2017/08/14 v190
	1. Max opacity and min opacity settings are added for the action bar.

2017/06/17 v189
	1. Fix the tip for tokens.

2017/05/21 v188
	1. Add a missing line to fix tip filter changing not work for auto popup action bar.

2017/05/15 v187
	1. Fix the buff order when change the specialization.

2017/05/06 v186
	1. Fix error when delete item form auto popup list.

2017/05/05 v185
	1. Change the method used to hide original nameplates.

2017/05/05 v184
	1. A macro binding editor is added for raid panel, so you can bind keys for macros.
	2. You can give an order for buffs, so you can find buff missing in the first time.

2017/05/02 v183
	1. Make sure the defaut nameplates will be hidden.

2017/04/29 v182
	1. Smooth mode added for raid panel.

2017/04/27 v181
	1. Force hide default nameplates in the next phase of the events.

2017/04/18 v180
	1. The blizzard's nameplates would be shown in the dungeon for frendly players.
