@@ -1,7 +1,7 @@
 ## Interface: 70300
 ## Title: IGAS_UI
 ## Author: kurapica.igas@gmail.com
-## Version: v206
+## Version: v207
 ## Notes: UI demo for IGAS
 ## eMail: kurapica.igas@gmail.com
 ## URL: http://github.com/kurapica
