@@ -526,3 +526,8 @@ L["Raid Target"] = "团队标记"
 L["Square Layout"] = "方形布局"
 L["Circle Layout"] = "圆形布局"
 L["Drag the masked button to modify the layout."] = "移动被选中的按钮来修改布局。"
+
+L["Player's holding the shift key"] = "玩家按住了shift键"
+L["Player's holding the ctrl key"] = "玩家按住了ctrl键"
+L["Player's holding the alt key"] = "玩家按住了alt键"
+L["Player's mouse cursor is currently holding an item/ability/macro/etc"] = "玩家的鼠标上有物品/技能/宏等"
